[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/sound/fx/pick_up_3.ogg" type="AudioStream" id=1]
[ext_resource path="res://src/items/heart.gd" type="Script" id=2]
[ext_resource path="res://src/items/graphics/heart.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="Animation" id=2]
resource_name = "beat"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Heart:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1, 1.3, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0.4, 0.4 ), Vector2( 0.25, 0.25 ), Vector2( 0.4, 0.4 ), Vector2( 0.25, 0.25 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "explode"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Heart:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Heart:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}

[node name="Heart" type="Area2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Heart" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="SoundCollectHeart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/beat = SubResource( 2 )
anims/explode = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Heart_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
